[package]
name = "bohwonbk"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bohwonbk_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
actix-cors = "0.7.0"
actix-http = "3.8.0"
actix-web = { version = "4.8.0", features = ["openssl"] }
chrono = { version = "0.4.26", features = ["serde"] }
crypto = "0.5.1"
derive_more = "0.99.18"
dotenv = "0.15.0"
env_logger = "0.11.5"
fake = { version = "2.9.2", features= ['derive'] }
futures = "0.3.30"
futures-util = "0.3.30"
jsonwebkey = { version = "0.3.5", features = ["pkcs-convert"] }
lazy_static = "1.5.0"
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["json", "multipart"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
serde_repr = "0.1.19"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
tokio = { version = "1.39.2", features = ["full"] }
tokio-stream = "0.1.15"
uuid = { version = "1.10.0", features = ["v7", "serde"] }
